--- a/tasks/user/applications.yml
+++ b/tasks/user/applications.yml
@@ -1,10 +1,4 @@
 ---
-- name: All - Git update pkenv  # noqa git-latest
-  diff: false
-  ansible.builtin.git:
-    repo: https://github.com/iamhsa/pkenv.git
-    dest: ~/Applications/pkenv
-
 - name: All - Git update pyenv  # noqa git-latest
   diff: false
   ansible.builtin.git:
@@ -95,8 +89,16 @@
     dest: "$HOME/.local/bin/{{ item.name }}"
     mode: "{{ item.mode }}"
   loop:
+    - name: pkenv-update
+      mode: '0700'
     - name: tfenv-update
       mode: '0700'
+
+- name: All - pkenv-update
+  ansible.builtin.command:
+    cmd: "$HOME/.local/bin/pkenv-update"
+  register: pkenv_update_result
+  changed_when: pkenv_update_result.stdout != 'Already up to date.'
 
 - name: All - tfenv-update
   ansible.builtin.command:
