--- a/tasks/user/applications.yml
+++ b/tasks/user/applications.yml
@@ -1,10 +1,4 @@
 ---
-- name: All - Git update pyenv  # noqa git-latest
-  diff: false
-  ansible.builtin.git:
-    repo: https://github.com/pyenv/pyenv.git
-    dest: ~/Applications/pyenv
-
 - name: All - Git update pyenv plugins  # noqa git-latest
   diff: false
   ansible.builtin.git:
@@ -91,6 +85,8 @@
   loop:
     - name: pkenv-update
       mode: '0700'
+    - name: pyenv-update
+      mode: '0700'
     - name: tfenv-update
       mode: '0700'
 
@@ -99,6 +95,12 @@
     cmd: "$HOME/.local/bin/pkenv-update"
   register: pkenv_update_result
   changed_when: pkenv_update_result.stdout != 'Already up to date.'
+
+- name: All - pyenv-update
+  ansible.builtin.command:
+    cmd: "$HOME/.local/bin/pyenv-update"
+  register: pyenv_update_result
+  changed_when: pyenv_update_result.stdout != 'Already up to date.'
 
 - name: All - tfenv-update
   ansible.builtin.command:
