centos: fix rpm key for hashicorp

--- a/tasks/system/redhat/centos/repositories.yml
+++ b/tasks/system/redhat/centos/repositories.yml
@@ -27,7 +27,7 @@
 # TODO: remove this workaround when dnf uses the rpm key database
 - name: RedHat - refresh dnf keys for Hashicorp  # noqa no-handler
   command: "dnf -q makecache -y --disablerepo='*' --enablerepo='hashicorp'"
-  when: rpm_key_code.changed
+  when: rpm_key_hashicorp.changed
 
 - name: CentOS - Import RPM-GPG-KEY-rpmfusion-free signing key
   ansible.builtin.rpm_key:
