--- a/tasks/system/redhat/fedora/repositories.yml
+++ b/tasks/system/redhat/fedora/repositories.yml
@@ -21,7 +21,7 @@
 # TODO: remove this workaround when dnf uses the rpm key database
 - name: RedHat - refresh dnf keys for Hashicorp  # noqa no-handler
   command: "dnf -q makecache -y --disablerepo='*' --enablerepo='hashicorp'"
-  when: rpm_key_hasicorp.changed
+  when: rpm_key_hashicorp.changed
 
 - name: Fedora - Import RPM-GPG-KEY-rpmfusion-free signing key
   ansible.builtin.rpm_key:
