--- a/tasks/system/kubernetes.yml
+++ b/tasks/system/kubernetes.yml
@@ -3,6 +3,7 @@
   ansible.builtin.get_url:
     url: https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
     dest: /usr/local/bin/minikube
+    mode: '0755'
 
 - name: All - Enable execue for minikube
   ansible.builtin.file:
