redhat: change dnf-automatic to all packages

--- a/files/etc/dnf/automatic.conf
+++ b/files/etc/dnf/automatic.conf
@@ -2,7 +2,8 @@
 #  What kind of upgrade to perform:
 # default                            = all available upgrades
 # security                           = only the security upgrades
-upgrade_type = security
+# using default because not all repositories make use of the security markers
+upgrade_type = default
 random_sleep = 0
 
 # Maximum time in seconds to wait until the system is on-line and able to
