redhat: centos and fedora install different psutil packages

--- a/tasks/system/redhat/fedora/packages.yml
+++ b/tasks/system/redhat/fedora/packages.yml
@@ -28,6 +28,7 @@
     - mozilla-fira-mono-fonts
     - mozilla-fira-sans-fonts
     - podman
+    - python3-psutil
     - ShellCheck
     - sqlitebrowser
     - starship  # CLI prompt
