all: install 1password-cli

--- a/tasks/system/debian/debian/packages.yml
+++ b/tasks/system/debian/debian/packages.yml
@@ -3,6 +3,7 @@
   ansible.builtin.apt:
     pkg:
       - 1password
+      - 1password-cli
       - npm
     state: present
   when: ansible_distribution_major_version|int >= 10
