redhat: install sd

--- a/tasks/system/redhat/packages.yml
+++ b/tasks/system/redhat/packages.yml
@@ -110,6 +110,7 @@
     - p7zip
     - pv
     - ripgrep
+    - sd  # like sed but with python regex
     - ytop  # CLI system monitoring
     # TODO: enable this again when yubikey-manager fixes the constraints around cryptography
     # - yubikey-manager
